fixed mobile viewport overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* styling for the reactbits background to make it work as background rather than as separate componenet */
 .light-rays-container {
   width: 100%;
   height: 100%;
@@ -10,3 +10,8 @@
   z-index: 3;
   overflow: hidden;
 }
+
+/* -----this style is helpfull in finding the elemets which cause viewport overflow--- */
+/* * {
+  outline: 1px solid red;
+} */
